--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,73 @@
 	<artifactId>preverify</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
+	
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <id>parse-version</id>
+                        <goals>
+                            <goal>parse-version</goal>
+                        </goals>
+                        <configuration>
+                            <propertyPrefix>parsedVersion</propertyPrefix>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <!-- <releaseVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-${parsedVersion.buildNumber}</releaseVersion> -->
+                    <!-- <developmentVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-${parsedVersion.nextBuildNumber}-SNAPSHOT</developmentVersion> -->
+                    <releaseVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}</releaseVersion>
+                    <developmentVersion>${parsedVersion.majorVersion}.${parsedVersion.nextMinorVersion}-SNAPSHOT</developmentVersion>
+                    <!--
+                      CircleCI will skip triggering a build for ALL commits that are
+                      pushed together if a commit message contains [skip ci].
+                      https://circleci.com/docs/2.0/skip-build/
+
+                      The two commits made by the maven-release-plugin should be skipped,
+                      because release artifacts are already deployed to artifacts repository
+                      and the commit with just a new development version in pom.xml does
+                      not need to be released (avoid cycle).
+                    -->
+                    <scmCommentPrefix xml:space="preserve">[skip ci] [maven-release-plugin] </scmCommentPrefix>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+      <repository>
+        <id>repository</id>
+        <name>Releases</name>
+        <url>${env.MAVEN_REPO_URL}/maven-releases</url>
+      </repository>
+      <snapshotRepository>
+        <id>repository</id>
+        <name>Snapshots</name>
+        <url>${env.MAVEN_REPO_URL}/maven-snapshots</url>
+      </snapshotRepository>
+    </distributionManagement>
+
+    <scm>
+      <url>https://github.com/sympower/preverifier</url>
+      <connection>git@github.com:sympower/preverifier.git</connection>
+      <developerConnection>scm:git:git@github.com:sympower/preverifier.git</developerConnection>
+      <tag>HEAD</tag>
+    </scm>
+	
 </project>
