--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,14 @@
 	<property environment="env"/>
 	<property name="source.folder" value="." />
 	<property name="ship.folder" value="./build" />
+	
+	<!-- TODO: This target will become redundant if we use make clean during the build, remove -->
+	<target name="clean">
+		<delete>
+			<fileset dir="build" includes="**/*.o"/>
+			<fileset dir="build" includes="**/preverify"/>
+		</delete>
+	</target>
 
 	<target name="init-aether">
 		<!-- https://wiki.eclipse.org/Aether/Ant_Tasks -->
