Cleanup/fix CircleCI build of the binary artifacts
- make the root build.sh script able to build the project again
- use it for CircleCI
- replace the "latest" debian Docker image usage with the currently latest
  actual debian release version (9.9) to ensure build stability

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: gcc:4.9
+      - image: debian:9.9
     working_directory: ~/workdir
     steps:
       - checkout
@@ -13,9 +13,7 @@ jobs:
             - dependencies-
       - run:
           name: Build Linux binary
-          command: |
-            cd build/linux
-            make
+          command: ./build.sh
       - save_cache:
           paths:
             - ~/.m2
