--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
             - dependencies-
       - run:
           name: Build Linux binary
-          command: ./build.sh
+          command: |
+            chmod +x build.sh build/linux/*.sh
+            ./build.sh
       - save_cache:
           paths:
             - ~/.m2
