Restore build.sh permissions after build to fix CircleCI 'release' job
Otherwise the build fails with an error like:

```
[ERROR] Failed to execute goal org.apache.maven.plugins:maven-release-plugin:2.5.3:prepare (default-cli) on project preverify: Cannot prepare the release because you have local modifications :
[ERROR] [build.sh:modified]
```

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           command: |
             chmod +x build.sh
             ./build.sh
+            chmod -x build.sh
       - save_cache:
           paths:
             - ~/.m2
